# viralforge

./: .REVENUECAT_NEW_TIER_SETUP.md.kate-swp  .env.example  .firebaserc  .gitignore  .replit  =0.4.22  ANDROID_FUNCTIONALITY_TEST_REPORT.md  ANDROID_PRODUCTION_BUILD_RUBRIC.md  ANDROID_SHIPPING_CHECKLIST.md  ANDROID_STATUS_BAR_FIX.md  ANDROID_STATUS_BAR_ISSUE_REPORT.md  ANDROID_TEST_REPORT_OCT4.md  BRUTAL_FINAL_ASSESSMENT.md  CLAUDE.md  COST_OPTIMIZATION.md  CREWAI_SETUP.md  CREW_SOCIAL_TOOLS_USAGE.md  CRITICAL_KEYSTORE_SECURITY_WARNING.md  DATA_WAREHOUSE_ARCHITECTURE.md  DEBUGGING_STEP_2_INSTRUCTIONS.md  Dockerfile  GOOGLE_PLAY_PRODUCTION_READY.md  HOW_TO_SEND_TO_YOUR_BROTHER.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PASTE_THIS_IN_CONSOLE.js  PLAY_STORE_SUBMISSION.md  PROGRESS.md  PROMPT_OPTIMIZATION_REPORT.md  README.md  REVENUECAT_ENTITLEMENTS.md  REVENUECAT_NEW_TIER_SETUP.md  RUN_TESTS_NOW.md  SASS_COLOR_SYSTEM_IMPLEMENTATION.md  SASS_PERFORMANCE_BASELINE.md  SECURITY_FIXES_COMPLETE.md  SUBSCRIPTION_SYSTEM_FIX_PLAN.md  VIRAL_SCORING_RUBRIC_V2_IMPLEMENTATION.md  YOUTUBE_OAUTH_TESTING_PLAN.md  add-omar-user.ts  (+47 more)
.claude/: mcp.json  settings.json
server/crew-social-tools/: CRITICAL_FIXES_APPLIED.md  Dockerfile  FINAL_TEST_REPORT.md  INTEGRATION_GUIDE.md  README.md  README_MCP.md  SETUP.md  TEST_RESULTS.md  crewai_integration.py  docker-compose.yml  load_env_and_test.sh  mcp_server.py  pyproject.toml  requirements.txt  test_endpoints.sh  test_full_system.py  test_integration.py  test_mcp.sh  youtube_rag_tools.py
server/crew-social-tools/.serena/: project.yml
(+332 files in other folders)
