[project]
name = "crew-social-tools-mcp"
version = "1.0.0"
description = "MCP Server for Crew Social Tools - Social media scraping for AI agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0"
]

[project.scripts]
crew-social-tools-mcp = "mcp_server:main"
